# ntpdate

./: Cargo.toml  README.md
src/: main.rs  ntp.rs
