[package]
name = "ntpdate"
version = "0.1.0"
edition = "2021"
description = "Simple NTP client"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
bytes = "1.2.1"
clap = { version = "4.0.26", features = ["derive"] }
time = { version = "0.3.17", features = ["formatting", "macros"] }
tokio = { version = "1.23.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
