[package]
name = "ntpdate"
version = "0.1.0"
edition = "2021"
description = "Simple NTP client"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
bytes = "1.3.0"
clap = { version = "4.0.32", features = ["derive"] }
time = { version = "0.3.17", features = ["formatting", "macros"] }
tokio = { version = "1.24.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
