[package]
name = "ntpdate"
version = "0.1.0"
edition = "2021"
description = "Simple NTP client"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bytes = "1.5.0"
clap = { version = "4.4.6", features = ["derive"] }
time = { version = "0.3.30", features = ["formatting", "macros"] }
tokio = { version = "1.33.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
